# betiq

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  docs-publish.yml  documentation.yaml  publish-package.yml  pypi-publish.yml  python-publish.yml  static.yml
betiq/: __init__.py  caller.py  event_odds.py  historical_odds.py  odds.py  quota.py  scores.py  sports.py
docs/: conf.py  index.rst
theoddsapi/: __init__.py  caller.py  event_odds.py  historical_odds.py  scores.py
