[tool.poetry]
name = "theoddsapi"
version = "0.1.0"
description = "An unofficial SDK for The Odds API."
authors = ["Ian Draves <iantdraves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
