[tool.poetry]
name = "betiq"
version = "0.1.0"
description = "An unofficial SDK for The Odds API."
authors = ["Ian Draves <iantdraves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
sphinx = "^7.2.5"
furo = "^2023.8.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
